# anonchat2

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
backend/: go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/call/: call.go  call_test.go
backend/internal/chat/: chat.go  chat_test.go
backend/internal/config/: config.go  config_test.go
backend/internal/health/: health.go
backend/internal/http/: errors.go  middleware.go  router.go
backend/internal/logger/: logger.go
backend/internal/presence/: presence.go
backend/internal/ratelimit/: ratelimit.go
backend/internal/realtime/: hub.go  id.go  protocol.go
backend/internal/room/: room.go  room_test.go
backend/internal/security/: origin.go
build-linux/: CMakeCache.txt
docs/: API.md  ARCHITECTURE.md  CALLS.md  LOCAL_DEV.md  MIGRATION_PLAN.md  OPERATIONS.md  PRIVACY_MODEL.md  REALTIME_PROTOCOL.md  deferred-implementation-notes.md
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.d.ts  app.html
frontend/static/: manifest.webmanifest  sw.js
ops/: Caddyfile.example
ops/coturn/: README.md  turnserver.conf.example
src/: server.c
web/: app.js  config.js  index.html  local-config.example.js  manifest.webmanifest  styles.css  sw.js
web/modules/: auth.js  backup.js  call-backend-relay.js  call-p2p.js  call-relay.js  calls.js  conversations.js  crypto-box.js  device-session.js  direct.js  dom.js  files.js  local-db.js  notifications.js  rooms.js  state.js  toast.js  ui.js  wire.js
(+18 files in other folders)
